# zimbra-mirror

./: README.buildZCS  ant-global.xml
Ajax/: .classpath  .cvsignore  .mymetadata  .project  NOTICE.txt  build.xml
Ajax/src/: config_en.properties  config_es.properties
AnalyzerSample/: .classpath  .project  build.xml
AnalyzerSample/conf/: MANIFEST.MF
AnalyzerSample/docs/: CustomAnalyzer.txt
ClamScanner/: .classpath  .project  build.xml
ClamScanner/conf/: MANIFEST.MF
OpenID/: README.txt  build.xml  formredirection.jsp
OpenID/conf/: MANIFEST.MF  jetty.xml  webdefault.xml
OpenID/web/: formredirection.jsp  index.jsp  openid.xrds  return.jsp
SampleOAuthProviderExtension/: README.txt  authorize.jsp  build.xml  build.xml.org
SampleOAuthProviderExtension/conf/: MANIFEST.MF
ZimbraAdminExt/: .classpath  .project  build.properties  build.xml
ZimbraAdminExt/com_zimbra_convertd/: com_zimbra_convertd.js  com_zimbra_convertd.properties  com_zimbra_convertd_ar.properties  com_zimbra_convertd_da.properties  com_zimbra_convertd_de.properties  com_zimbra_convertd_el.properties  com_zimbra_convertd_fr.properties  com_zimbra_convertd_hi.properties  com_zimbra_convertd_ja.properties  com_zimbra_convertd_ru.properties  (+2 more)
ZimbraAdminVersionCheck/: .classpath  .project  build.xml
ZimbraCSharpClient/: Zimbra.Client.csproj
ZimbraCharset/: .project  build.xml
ZimbraClient/: .classpath  .project
ZimbraCommon/: .classpath  .p4ignore  .project  pom.xml  qatool.txt
ZimbraEvolution/: AUTHORS  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  eplugin.mk  evolution-zimbra.spec  evolution-zimbra.spec.in  intltool-update  libtool
ZimbraEvolution/addressbook/: Makefile  Makefile.am  Makefile.in  create-account  create-account.c  e-book-backend-zimbra-factory.c  e-book-backend-zimbra-factory.lo  e-book-backend-zimbra.c  e-book-backend-zimbra.h  e-book-backend-zimbra.lo  libebookbackendzimbra.la  outfile
ZimbraEvolution/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ZimbraEvolution/calendar/: Makefile  Makefile.am  Makefile.in  TODO  a.out  create-account.c  create-account.c.new  delete-account.c  e-cal-backend-zimbra-factory.c  e-cal-backend-zimbra-factory.h  e-cal-backend-zimbra-factory.lo  e-cal-backend-zimbra-utils.c  e-cal-backend-zimbra-utils.h  e-cal-backend-zimbra-utils.lo  e-cal-backend-zimbra.c  e-cal-backend-zimbra.h  e-cal-backend-zimbra.lo  good.xml  libecalbackendzimbra.la  list-account.c  outfile  outfile.xml  outfile1  outflie  temp.xml  temp1.xml  test.c  timezone.c  tzmake  tzs.txt
ZimbraEvolution/camel/: Makefile  Makefile.am  Makefile.in  camel-zimbra-provider.c  camel-zimbra-provider.lo  libcamelzimbra.la  libcamelzimbra.urls
ZimbraEvolution/eplugin/: Makefile  Makefile.am  Makefile.in  camel-zimbra-listener.c  camel-zimbra-listener.h  camel-zimbra-listener.lo  com-scalix.eplug.in  com-zimbra-account-setup.eplug  com-zimbra-account-setup.eplug.in  libcom-zimbra-account-setup.la  org-gnome-addressbook-file.eplug.xml  zimbra-account-setup.c  zimbra-account-setup.lo
ZimbraEvolution/glog/: Makefile  Makefile.am  Makefile.in  glog.c  glog.h  glog.lo  glogcategory.h  gloggnucvarargs.h  gloginlinevarargs.h  glogisovarargs.h  glogmacros.h  glogmain.h  glogprintf.c  glogprintf.h  glogprintf.lo  glogversion.h  glogversion.h.in  libglog.la
ZimbraEvolution/libezimbra/: Makefile  Makefile.am  Makefile.in  e-zimbra-connection.c  e-zimbra-connection.h  e-zimbra-connection.lo  e-zimbra-debug.c  e-zimbra-debug.h  e-zimbra-debug.lo  e-zimbra-folder.c  e-zimbra-folder.h  e-zimbra-folder.lo  e-zimbra-item.c  e-zimbra-item.h  e-zimbra-item.lo  e-zimbra-log.c  e-zimbra-log.h  e-zimbra-log.lo  e-zimbra-utils.c  e-zimbra-utils.h  e-zimbra-utils.lo  e-zimbra-xml.c  e-zimbra-xml.h  e-zimbra-xml.lo  libezimbra.la  libezimbra.pc.in  soap-test.c  test.c  zimbra-version.h  zimbra-version.h.in  zimbra.c  zimbra.h  zimbra.lo
ZimbraEvolution/po/: .intltool-merge-cache  Makefile  Makefile.in  POTFILES  POTFILES.in  de.gmo  de.po
ZimbraHelloWorld/: README  build.xml
ZimbraHtmlExtras/: .classpath  .project  build.xml
ZimbraIM/: .classpath  .project  build.xml
ZimbraLDAPUtilsExtension/: .classpath  .project  build.xml
ZimbraLauncher/: .project  Makefile  build.xml
ZimbraLicenses/: bylicense.html  byproduct.html  byvendor.html  javamail.txt  jndi.txt  jstl.txt  pdfbox.txt  perl.txt  tohtml
ZimbraME/: .classpath  .devices.xml.swp  .project  README.txt  build.xml  build.xml.orig  custom-css-attributes.xml  license.key  midlet.properties
ZimbraMigrationTools/: MANIFEST.MF  Migration.sln  ReadMe.txt  Registry free activation of Com Dlls.docx  build.bat  build.xml  module_ztozprov.xml  zmztozmig.conf  ztozconfig  ztozprov.ipr  ztozprov.iws  ztozprov.properties
ZimbraNginxLookup/: .classpath  .project  build.xml
ZimbraOffline/: .classpath  .project  ZimbraOffline.install4j  build.properties  build.xml  custom-install-msgs_en.utf8  installer-ant-mac.xml  installer-ant.xml  jetty-ant-config.xml  jetty-ant.xml
ZimbraPosixAccountsExtension/: .project  build.xml
ZimbraSambaExtension/: .classpath  .project  build.xml
ZimbraSelenium/: .classpath  .project  build.xml
ZimbraServer/: .classpath  .project  jetty-ant-config.xml  jetty-ant.xml  pom.xml
ZimbraSoap/: .classpath  .project  pom.xml
ZimbraTagLib/: .classpath  .project  build.xml
ZimbraToast/: .cvsignore  AssemblyInfo.cs  Config.cs  Config.resx  Crypt.cs  LiquidNotifier.h  LiquidToast.cpp  LiquidToast.rc  LiquidToast.sln  Mail.cxx  Mail.h  MailboxMonitor.cs  NotifParams.cpp  NotifParams.h  NotifierWnd.cpp  NotifierWnd.h  OptionsDlg.cpp  OptionsDlg.h  Rpc.cxx  Rpc.h  Toast.cs  Toast.resx  TrayIcon.cpp  TrayIcon.h  Util.cxx  Util.h  Zimbra.Toast.csproj  Zimbra.cs  ZimbraNotifier.cpp  ZimbraNotifier.h  ZimbraToast.cpp  ZimbraToast.rc  ZimbraToast.sln  ZimbraToast.vcproj  resource.h  stdafx.cpp  stdafx.h
ZimbraWebClient/: .classpath  .p4ignore  .project  build-prod-touch.sh
Zimlet/: .classpath  .project  build.xml
(+31249 files in other folders)
